tests/ui/error-codes/E0449.stderr
error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/E0449.rs:11:1
   |
LL | pub impl Bar {}
   | ^^^
   |
   = note: place qualifiers on individual impl items instead
help: remove the qualifier
   |
LL - pub impl Bar {}
LL +  impl Bar {}
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/E0449.rs:13:1
   |
LL | pub impl Foo for Bar {
   | ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL - pub impl Foo for Bar {
LL +  impl Foo for Bar {
   |

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/E0449.rs:14:5
   |
LL |     pub fn foo() {}
   |     ^^^
   |
   = note: trait items always share the visibility of their trait
help: remove the qualifier
   |
LL -     pub fn foo() {}
LL +      fn foo() {}
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0449`.
